--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,11 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
+
+### POWER OPTIONS
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
+CONFIG_ZMK_IDLE_TIMEOUT=120000
+CONFIG_ZMK_SLEEP=y
