--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,6 +2,17 @@
 CONFIG_ZMK_RGB_UNDERGLOW=y
 # Use the STRIP config specific to the LEDs you're using
 CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=5
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+#CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
+# Default effect speed (1-5)
+#CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=
+# Default effect index from the effect list (see below)
+# 0	Solid color
+# 1	Breathe
+# 2	Spectrum
+# 3	Swirl
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
