--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,5 +1,5 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW=n
 # Use the STRIP config specific to the LEDs you're using
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=5
@@ -15,7 +15,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
 
 # Uncomment the following line to enable the Corne OLED Display
-CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=n
 
 ### POWER OPTIONS
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
