--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,7 +1,7 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
 CONFIG_ZMK_RGB_UNDERGLOW=n
 # Use the STRIP config specific to the LEDs you're using
-CONFIG_WS2812_STRIP=y
+CONFIG_WS2812_STRIP=n
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=5
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 #CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
