--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,23 +1,6 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=n
-# Use the STRIP config specific to the LEDs you're using
-CONFIG_WS2812_STRIP=n
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=5
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-#CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
-# Default effect speed (1-5)
-#CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=
-# Default effect index from the effect list (see below)
-# 0	Solid color
-# 1	Breathe
-# 2	Spectrum
-# 3	Swirl
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
+# CONFIG_ZMK_RGB_UNDERGLOW=y
+# CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
-CONFIG_ZMK_DISPLAY=n
-
-### POWER OPTIONS
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
-CONFIG_ZMK_IDLE_TIMEOUT=120000
-CONFIG_ZMK_SLEEP=y
+# CONFIG_ZMK_DISPLAY=y
