--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,7 +1,7 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_ZMK_RGB_UNDERGLOW=y
 # Use the STRIP config specific to the LEDs you're using
-CONFIG_WS2812_STRIP=n
+CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=5
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 #CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
@@ -12,7 +12,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 # 1	Breathe
 # 2	Spectrum
 # 3	Swirl
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=n
