--- a/config/corne.conf
+++ b/config/corne.conf
@@ -13,6 +13,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 # 2	Spectrum
 # 3	Swirl
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
+CONFIG_ZMK_BACKLIGHT_BRT_START=100
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=n
