--- a/config/corne.conf
+++ b/config/corne.conf
@@ -3,7 +3,7 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 # Use the STRIP config specific to the LEDs you're using
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=5
-#CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
 #CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
 # Default effect speed (1-5)
 #CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=
