--- a/config/corne.conf
+++ b/config/corne.conf
@@ -15,7 +15,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=100
 
 # Uncomment the following line to enable the Corne OLED Display
-CONFIG_ZMK_DISPLAY=n
+CONFIG_ZMK_DISPLAY=y
 
 ### POWER OPTIONS
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
