--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,7 +2,7 @@
 CONFIG_ZMK_RGB_UNDERGLOW=y
 # Use the STRIP config specific to the LEDs you're using
 CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+#CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 #CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
 # Default effect speed (1-5)
 #CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=
@@ -18,6 +18,6 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=100
 CONFIG_ZMK_DISPLAY=y
 
 ### POWER OPTIONS
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=120000
 CONFIG_ZMK_IDLE_TIMEOUT=120000
 CONFIG_ZMK_SLEEP=y
