--- a/config/west.yml
+++ b/config/west.yml
@@ -1,7 +1,8 @@
 manifest:
   remotes:
     - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
+    # url-base: https://github.com/zmkfirmware
+      url-base: https://github.com/ftc/ 
     # Additional modules containing boards/shields/custom code can be listed here as well
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
   projects:
