se agregan timeout de luces y pantalla

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -13,9 +13,14 @@ CONFIG_WS2812_STRIP=y
 # 3	Swirl
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=100
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+
+CONFIG_I2C=y
+CONFIG_SSD1306=y
 
 ### POWER OPTIONS
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=120000
